--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 		<div id="statusDiv">Status: Disconnected</div>
 		<div id="bleId">DeviceId:</div>
 		<div id="debugDiv"></div> -->
+		<p> hello </p>
 		<div class="Beacon" id="A"></div>
 		<div class="Beacon" id="B"></div>
 		<div class="Beacon" id="C"></div>
