--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 		<div id="bleId">DeviceId:</div>
 		<div id="debugDiv"></div> -->
 		<p> hello </p>
-		<div class="Beacon" id="A"></div>
-		<div class="Beacon" id="B"></div>
-		<div class="Beacon" id="C"></div>
+		<div class="Beacon" id="Beacon1"></div>
+		<div class="Beacon" id="Beacon2"></div>
+		<div class="Beacon" id="Beacon3"></div>
 		<div class="Room" id="r101" style="display: none"></div>
 		<div class="Room" id="r102" style="display: none"></div>
 		<div class="Room" id="ServerRoom" style="display: none"></div>
@@ -32,15 +32,15 @@
 		<div class="Room" id="r103" style="display: none"></div>
 		<div class="Room" id="r104" style="display: none"></div>
 		<div class="Room" id="WC" style="display: none"></div>
-		<button id="buttonA" onClick = "ShowBeacon1()">A</button>
-		<button id="buttonB" onClick = "ShowBeacon2()">B</button>
-		<button id="buttonC" onClick = "ShowBeacon3()">C</button>
-		<button id="button101" onClick = "ShowRoom101()">101</button>
-		<button id="button102" onClick = "ShowRoom102()">102</button>
-		<button id="buttonServerRoom" onClick = "ShowServerRoom()">ServerRoom</button>
-		<button id="buttonPrinters" onClick = "ShowPrinters()">Printers</button>
-		<button id="button103" onClick = "ShowRoom103()">103</button>
-		<button id="button104" onClick = "ShowRoom104()">104</button>
-		<button id="buttonWC" onClick = "ShowRoomWC()">WC</button>
+		<button id="buttonA" onClick = "toggleDiv('Beacon1')">A</button>
+		<button id="buttonB" onClick = "toggleDiv('Beacon2')">B</button>
+		<button id="buttonC" onClick = "toggleDiv('Beacon3')">C</button>
+		<button id="button101" onClick = "toggleDiv('r101')">101</button>
+		<button id="button102" onClick = "toggleDiv('r102')">102</button>
+		<button id="buttonServerRoom" onClick = "toggleDiv('ServerRoom')">ServerRoom</button>
+		<button id="buttonPrinters" onClick = "toggleDiv('Printers')">Printers</button>
+		<button id="button103" onClick = "toggleDiv('r103')">103</button>
+		<button id="button104" onClick = "toggleDiv('r104')">104</button>
+		<button id="buttonWC" onClick = "toggleDiv('WC')">WC</button>
     </body>
 </html>
