Revert "removed timers"
This reverts commit 4c63f5abd947c7e7e1b0cd73a6b9e45b76d19f5c.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
         <title>Beacon</title>
     </head>
     <body onload="onLoad()">
+<!--
+		<h1>Blufruit test</h1>
+           
+		<ul id="bleDeviceList"> </ul>  
+		<button id="refreshButton" onClick = "refreshDeviceList()">Refresh</button>
+		<br>
+		<div id="statusDiv">Status: Disconnected</div>
+		<div id="bleId">DeviceId:</div>
+		<div id="debugDiv"></div> -->
 		<div class="Beacon" id="Beacon1"></div>
 		<div class="Beacon" id="Beacon2"></div>
 		<div class="Beacon" id="Beacon3"></div>
